deploy/k8s/overlays/prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: spudopenai
  annotations:
    acme.cert-manager.io/http01-edit-in-place: "true"
    cert-manager.io/cluster-issuer: letsencrypt-prod
    cert-manager.io/issue-temporary-certificate: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-port-in-redirects: "false"
spec:
  ingressClassName: nginx
  tls:
    - secretName: spudopenai-live-tls
      hosts:
        - spudopenai.lol
        - www.spudopenai.lol
  rules:
    - host: spudopenai.lol
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: spudopenai
                port:
                  number: 80
    - host: www.spudopenai.lol
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: spudopenai
                port:
                  number: 80
